--- a/css/styles.css
+++ b/css/styles.css
@@ -529,7 +529,59 @@ p {
 
   display: inline-block;
 }
+/* subscribe */
+.subscribe {
+}
+.subscribe-text {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.1;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--color-white);
 
+  margin-bottom: 20px;
+}
+
+.form-footer {
+  display: flex;
+  gap: 12px;
+}
+.form-email {
+  font-size: 16px;
+  line-height: 1.3;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.form-btn {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--color-white);
+  background-color: var(--color-accent);
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+  cursor: pointer;
+  padding: 10px 28px;
+}
+.form-btn-icon {
+  padding-left: 10px;
+}
 /* .address {
 } */
 .section-address {
