--- a/css/styles.css
+++ b/css/styles.css
@@ -530,8 +530,8 @@ p {
   display: inline-block;
 }
 /* subscribe */
-.subscribe {
-}
+/* .subscribe {
+} */
 .subscribe-text {
   font-style: normal;
   font-weight: 700;
@@ -547,6 +547,7 @@ p {
 .form-footer {
   display: flex;
   gap: 12px;
+  align-items: center;
 }
 .form-email {
   font-size: 16px;
@@ -561,6 +562,9 @@ p {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+
+  width: 358px;
+  height: 50px;
 }
 .form-btn {
   font-weight: 700;
@@ -573,14 +577,24 @@ p {
   color: var(--color-white);
   background-color: var(--color-accent);
 
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-color: transparent;
   cursor: pointer;
   padding: 10px 28px;
+
+  transition-property: box-shadow, background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 .form-btn-icon {
   padding-left: 10px;
+}
+
+.form-btn:hover,
+.form-btn:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  background: #188ce8;
 }
 /* .address {
 } */
