--- a/css/styles.css
+++ b/css/styles.css
@@ -626,6 +626,10 @@ p {
 
   min-width: 358px;
   min-height: 50px;
+
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .form-btn {
   font-weight: 700;
@@ -862,9 +866,6 @@ p {
   cursor: pointer;
 }
 
-/* .modal-btn-icon {
-  fill: var(--color-title2);
-} */
 /* форми в модальному вікні та заголовок*/
 
 .modal-form {
@@ -888,7 +889,99 @@ p {
   display: flex;
   gap: 10px;
   flex-direction: column;
+  align-items: center;
 }
+
+.modal-form-group {
+  position: relative;
+}
+
+.modal-form-input:focus {
+  outline-color: var(--color-accent);
+  color: var(--color-accent);
+}
+
+.modal-form-label {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: var(--color-text);
+  display: block;
+  margin-bottom: 4px;
+}
+
+.modal-form-input {
+  min-width: 448px;
+  max-height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  padding: 12px;
+  padding-left: 42px;
+  /* outline-color: var(--color-accent); */
+}
+
+.modal-form-icon {
+  position: absolute;
+  max-width: 18px;
+  top: 11px;
+  left: 12px;
+}
+
+.modal-form-textarea {
+  resize: none;
+  min-width: 448px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  padding: 12px 16px;
+
+  outline-color: var(--color-accent);
+}
+
+.modal-checkbox {
+  margin-bottom: 30px;
+  position: relative;
+}
+.modal-form-checkbox {
+  max-width: 16px;
+  max-height: 15px;
+}
+.form-checkbox-icon {
+  position: absolute;
+  width: 11px;
+  height: 8px;
+  top: 4px;
+  left: 3px;
+}
+.modal-checkbox-label {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--color-text);
+}
+
+.modal-form-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  text-decoration: underline;
+  color: var(--color-accent);
+}
+
 .modal-form-btn {
   font-family: inherit;
   font-weight: 700;
@@ -908,48 +1001,13 @@ p {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0s;
+
+  display: inline-flex;
+  justify-content: center;
 }
 
 .modal-form-btn:hover,
 .modal-form-btn:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-
-.modal-form-label {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 14px;
-  letter-spacing: 0.01em;
-  color: var(--color-text);
-  display: block;
-  margin-bottom: 4px;
-}
-
-.modal-form-input {
-}
-
-.modal-checkbox {
-  margin-bottom: 30px;
-}
-.modal-form-checkbox {
-}
-
-.modal-checkbox-label {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: var(--color-text);
-}
-.modal-form-link {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  text-decoration: underline;
-  color: var(--color-accent);
 }
