--- a/css/styles.css
+++ b/css/styles.css
@@ -832,7 +832,7 @@ p {
 
 .modal {
   width: 528px;
-  height: 581px;
+  min-height: 581px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -851,6 +851,7 @@ p {
 }
 .modal-btn {
   position: absolute;
+  z-index: 100;
   top: 8px;
   right: 8px;
   width: 30px;
@@ -870,8 +871,8 @@ p {
 
 .modal-form {
   position: absolute;
-  top: 40px;
-  left: 40px;
+  padding: 30px;
+  padding-left: 40px;
 }
 .modal-form-title {
   font-style: normal;
@@ -887,20 +888,28 @@ p {
 
 .modal-forms {
   display: flex;
-  gap: 10px;
+
   flex-direction: column;
   align-items: center;
 }
 
+.modal-forms-groups {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  align-items: center;
+}
 .modal-form-group {
   position: relative;
 }
-
-.modal-form-input:focus {
+.modal-form-group:focus-within .modal-form-input {
   outline-color: var(--color-accent);
+}
+.modal-form-group:focus-within .modal-form-icon {
   color: var(--color-accent);
 }
 
+/* .modal-form-group:focus-within  */
 .modal-form-label {
   font-style: normal;
   font-weight: 400;
@@ -913,7 +922,7 @@ p {
 }
 
 .modal-form-input {
-  min-width: 448px;
+  width: 448px;
   max-height: 40px;
 
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -921,7 +930,13 @@ p {
 
   padding: 12px;
   padding-left: 42px;
-  /* outline-color: var(--color-accent); */
+
+  outline-color: var(--color-text);
+
+  transition-property: outline-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 
 .modal-form-icon {
@@ -929,6 +944,13 @@ p {
   max-width: 18px;
   top: 11px;
   left: 12px;
+  color: var(--color-title2);
+  fill: currentColor;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
 }
 
 .modal-form-textarea {
@@ -945,23 +967,46 @@ p {
 
   padding: 12px 16px;
 
+  outline-color: var(--color-text);
+  margin-bottom: 20px;
+
+  transition-property: outline-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
+}
+
+.modal-form-group:focus-within .modal-form-textarea {
   outline-color: var(--color-accent);
 }
 
 .modal-checkbox {
   margin-bottom: 30px;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
+
 .modal-form-checkbox {
-  max-width: 16px;
-  max-height: 15px;
 }
 .form-checkbox-icon {
-  position: absolute;
-  width: 11px;
-  height: 8px;
-  top: 4px;
-  left: 3px;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--color-title2);
+  border-radius: 2px;
+  background-color: var(--color-white);
+  transition-property: background-color, border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0s;
+}
+
+.form-checkbox-icon-check {
+}
+.modal-form-checkbox:checked + .form-checkbox-icon {
+  background-color: var(--color-accent);
+  border-color: var(--color-accent);
 }
 .modal-checkbox-label {
   font-style: normal;
@@ -970,6 +1015,8 @@ p {
   line-height: 24px;
   letter-spacing: 0.03em;
   color: var(--color-text);
+
+  user-select: none;
 }
 
 .modal-form-link {
