--- a/css/styles.css
+++ b/css/styles.css
@@ -536,9 +536,6 @@ p {
 } */
 .section-address {
   font-style: normal;
-  display: block;
-  margin-left: auto;
-  margin-right: 70px;
 }
 
 .section-list {
@@ -570,7 +567,7 @@ p {
 }
 /* social */
 .social {
-  margin-right: 94px;
+  margin-left: 70px;
 }
 .social-title {
   font-style: normal;
@@ -613,8 +610,6 @@ p {
 .form-email {
   font-size: 16px;
   line-height: 1.3;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.03em;
 
   color: rgba(255, 255, 255, 0.6);
@@ -626,6 +621,7 @@ p {
 
   min-width: 358px;
   min-height: 50px;
+  outline: transparent;
 
   padding-left: 16px;
   padding-top: 15px;
@@ -837,6 +833,8 @@ p {
   top: 50%;
   left: 50%;
 
+  padding: 40px;
+
   transform: translate(-50%, -50%) scale(1) rotate(0);
   transition: transform 400ms ease-in-out 200ms, opacity 400ms ease-in-out 200ms;
 }
@@ -867,14 +865,10 @@ p {
 
 .modal-form {
   position: absolute;
-  padding: 30px;
-  padding-left: 40px;
 }
 .modal-form-title {
-  font-style: normal;
-  font-weight: 700;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--color-title);
@@ -894,6 +888,7 @@ p {
   gap: 10px;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 20px;
 }
 .modal-form-group {
   position: relative;
@@ -936,8 +931,9 @@ p {
 
 .modal-form-icon {
   position: absolute;
-  max-width: 18px;
-  top: 11px;
+  height: 18px;
+  width: 18px;
+  bottom: 11px;
   left: 12px;
   color: var(--color-title2);
   fill: currentColor;
@@ -963,7 +959,6 @@ p {
   padding: 12px 16px;
 
   outline-color: var(--color-text);
-  margin-bottom: 20px;
 
   transition-property: outline-color;
   transition-duration: 250ms;
